Cabal/tests/ParserTests/errors/spdx-3.cabal
cabal-version:       2.2
name:                spdx
version:             0
synopsis:            testing positive parsing of spdx identifiers
build-type:          Simple
license:             AGPL-1.0-only

library
  default-language: Haskell2010
